@@ -18,6 +18,18 @@ else.  With this, include the file(s) that you changed.
 
 Changes for CVS:
 
+server/pets.c: pet_move - fix formatting to be 4 space indentation.
+   if we remove the monster, free it here instead of having move_monster
+   do it.  Add check for was_destroyed after first call to move_ob -
+   crashes have been observed in that function, and I believe that is the
+   cause.
+server/monster.c: move_monster: let pet_move free the pet if necessary.
+server/spell_effect.c: Clear sleeping flag of monsters when casting
+   summon pet monster (or other creatures).  Some archs have this 
+   value on by default, so the monsters don't follow the player until
+   an enemy is found.
+MSW 2001-05-22
+
 socket/item.c: Don't raise player to top of stack when they look at
    something.  I think this may be causing server crashes in some
    circumstances - plus its not really needed anyways.
